--- a/_posts/2025-06-04-test.md
+++ b/_posts/2025-06-04-test.md
@@ -3,7 +3,8 @@ layout: post
 title: Markdown 使用指南
 date: 2025-06-04
 categories: [markdown]
-tags: [markdown, 教程, 示例]
+tags: [markdown, 示例,其他]
+excerpt: '这是一篇展示 Markdown 各种功能的示例文章。从基本的文本格式化到复杂的表格和数学公式，Markdown 都能轻松应对。掌握 Markdown 将极大提升你的文档编写效率。'
 ---
 
 # Markdown 使用指南
@@ -59,11 +60,11 @@ def hello_world():
 
 ## 4. 表格
 
-| 姓名 | 年龄 | 职业 |
-|------|------|------|
-| 张三 | 25 | 工程师 |
-| 李四 | 30 | 设计师 |
-| 王五 | 28 | 产品经理 |
+| 姓名 | 年龄 | 职业     |
+|----|------|--------|
+| 张三 | 25   | 工程师   |
+| 李四 | 30   | 设计师   |
+| 王五 | 28   | 产品经理 |
 
 ## 5. 链接和图片
 
