--- a/_posts/2023-09-12-question.md
+++ b/_posts/2023-09-12-question.md
@@ -15,4 +15,5 @@ author: zhangshuming
 ![2](/assets/question/1/Snipaste_2025-07-21_09-33-33.png)
 继续报了这个错
 ![3](/assets/question/1/Snipaste_2025-07-21_09-35-32.png)
+发现是有个3.3G的视频文件，将视频移除后提交成功
 
