--- a/_posts/2022-02-12-tools.md
+++ b/_posts/2022-02-12-tools.md
@@ -1,161 +1,30 @@
 ---
 layout: post
 title: "工具集"
-date: 2022-01-03
+date: 2022-02-12
 categories: [其他]
-tags: [站点]
+tags: [mac,命令大全]
 author: zhangshuming
 ---
 
-# 工具集
+# mac 各种操作解决方案
 
-## 目录
+## 目录、
 
-1. [AI工具](#AI工具)
-2. [图片工具](#图片工具)
-3. [阮一峰技术文档](#阮一峰技术文档)
+1. [brew](#brew)
 
 ---
 
-## AI工具
+## 安装brew
+控制台输入
+```
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+```
+环境变量生效
+```
+echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> ~/.zprofile
+   eval "$(/opt/homebrew/bin/brew shellenv)"
 
-### 国外AI图片、视频生成工具
-- **Pollo AI**: <a href="https://pollo.ai/zh/pricing" target="_blank">https://pollo.ai/zh/pricing</a>
-
-### 国内AI图片、视频生成工具
-- **即梦AI**: <a href="https://jimeng.jianying.com/ai-tool/generate?type=video" target="_blank">https://jimeng.jianying.com/ai-tool/generate?type=video</a>
-
-## 图片工具
-
-### 在线制作favicon 比特虫
-- **比特虫**: <a href="https://www.bitbug.net/" target="_blank">https://www.bitbug.net/</a>
+```
 
 
-## 阮一峰技术文档
-
-### 前端开发
-- **Git教程**: <a href="https://www.ruanyifeng.com/blog/2015/12/git-cheat-sheet.html" target="_blank">https://www.ruanyifeng.com/blog/2015/12/git-cheat-sheet.html</a>
-- **JavaScript教程**: <a href="https://www.ruanyifeng.com/blog/2011/06/javascript_tutorial.html" target="_blank">https://www.ruanyifeng.com/blog/2011/06/javascript_tutorial.html</a>
-- **CSS教程**: <a href="https://www.ruanyifeng.com/blog/2019/03/css-tutorial.html" target="_blank">https://www.ruanyifeng.com/blog/2019/03/css-tutorial.html</a>
-- **CSS布局教程**: <a href="https://www.ruanyifeng.com/blog/2015/07/flex-examples.html" target="_blank">https://www.ruanyifeng.com/blog/2015/07/flex-examples.html</a>
-- **CSS选择器教程**: <a href="https://www.ruanyifeng.com/blog/2009/03/css_selectors.html" target="_blank">https://www.ruanyifeng.com/blog/2009/03/css_selectors.html</a>
-- **CSS动画教程**: <a href="https://www.ruanyifeng.com/blog/2014/02/css_transition_and_animation.html" target="_blank">https://www.ruanyifeng.com/blog/2014/02/css_transition_and_animation.html</a>
-- **CSS Grid布局入门教程**: <a href="https://www.ruanyifeng.com/blog/2019/03/grid-layout-tutorial.html" target="_blank">https://www.ruanyifeng.com/blog/2019/03/grid-layout-tutorial.html</a>
-- **CSS预处理器Sass入门教程**: <a href="https://www.ruanyifeng.com/blog/2012/06/sass.html" target="_blank">https://www.ruanyifeng.com/blog/2012/06/sass.html</a>
-
-### React相关
-- **React教程**: <a href="https://www.ruanyifeng.com/blog/2015/03/react.html" target="_blank">https://www.ruanyifeng.com/blog/2015/03/react.html</a>
-- **React Hooks入门教程**: <a href="https://www.ruanyifeng.com/blog/2020/09/react-hooks.html" target="_blank">https://www.ruanyifeng.com/blog/2020/09/react-hooks.html</a>
-- **React Native入门教程**: <a href="https://www.ruanyifeng.com/blog/2016/08/react_native.html" target="_blank">https://www.ruanyifeng.com/blog/2016/08/react_native.html</a>
-- **Redux入门教程**: <a href="https://www.ruanyifeng.com/blog/2016/09/redux_tutorial_part_one_basic_usages.html" target="_blank">https://www.ruanyifeng.com/blog/2016/09/redux_tutorial_part_one_basic_usages.html</a>
-
-### Vue相关
-- **Vue.js入门教程**: <a href="https://www.ruanyifeng.com/blog/2016/02/vue.html" target="_blank">https://www.ruanyifeng.com/blog/2016/02/vue.html</a>
-
-### JavaScript相关
-- **JavaScript模块化简史**: <a href="https://www.ruanyifeng.com/blog/2012/10/javascript_module.html" target="_blank">https://www.ruanyifeng.com/blog/2012/10/javascript_module.html</a>
-- **JavaScript异步编程的4种方法**: <a href="https://www.ruanyifeng.com/blog/2012/12/asynchronous%EF%BC%BFjavascript.html" target="_blank">https://www.ruanyifeng.com/blog/2012/12/asynchronous%EF%BC%BFjavascript.html</a>
-- **JavaScript设计模式**: <a href="https://www.ruanyifeng.com/blog/2019/08/javascript-design-patterns.html" target="_blank">https://www.ruanyifeng.com/blog/2019/08/javascript-design-patterns.html</a>
-- **JavaScript数组方法总结**: <a href="https://www.ruanyifeng.com/blog/2021/01/javascript-array-methods.html" target="_blank">https://www.ruanyifeng.com/blog/2021/01/javascript-array-methods.html</a>
-- **JavaScript事件循环机制**: <a href="https://www.ruanyifeng.com/blog/2013/10/event_loop.html" target="_blank">https://www.ruanyifeng.com/blog/2013/10/event_loop.html</a>
-- **JavaScript原型链详解**: <a href="https://www.ruanyifeng.com/blog/2011/06/javascript_prototype_chain.html" target="_blank">https://www.ruanyifeng.com/blog/2011/06/javascript_prototype_chain.html</a>
-- **JavaScript Promise入门教程**: <a href="https://www.ruanyifeng.com/blog/2014/05/promises.html" target="_blank">https://www.ruanyifeng.com/blog/2014/05/promises.html</a>
-- **JavaScript数据结构与算法**: <a href="https://www.ruanyifeng.com/blog/2013/01/javascript_data_structures.html" target="_blank">https://www.ruanyifeng.com/blog/2013/01/javascript_data_structures.html</a>
-- **JavaScript异步编程的演进**: <a href="https://www.ruanyifeng.com/blog/2015/05/async.html" target="_blank">https://www.ruanyifeng.com/blog/2015/05/async.html</a>
-- **TypeScript入门教程**: <a href="https://www.ruanyifeng.com/blog/2018/06/typescript.html" target="_blank">https://www.ruanyifeng.com/blog/2018/06/typescript.html</a>
-
-### 构建工具
-- **Webpack入门教程**: <a href="https://www.ruanyifeng.com/blog/2019/11/webpack-tutorial.html" target="_blank">https://www.ruanyifeng.com/blog/2019/11/webpack-tutorial.html</a>
-- **Babel入门教程**: <a href="https://www.ruanyifeng.com/blog/2016/01/babel.html" target="_blank">https://www.ruanyifeng.com/blog/2016/01/babel.html</a>
-
-### 后端开发
-- **Node.js教程**: <a href="https://www.ruanyifeng.com/blog/2018/03/nodejs-tutorial.html" target="_blank">https://www.ruanyifeng.com/blog/2018/03/nodejs-tutorial.html</a>
-- **Python入门教程**: <a href="https://www.ruanyifeng.com/blog/2013/03/python.html" target="_blank">https://www.ruanyifeng.com/blog/2013/03/python.html</a>
-- **Python编程入门**: <a href="https://www.ruanyifeng.com/blog/2013/03/python.html" target="_blank">https://www.ruanyifeng.com/blog/2013/03/python.html</a>
-
-### 数据库
-- **MySQL教程**: <a href="https://www.ruanyifeng.com/blog/2013/12/mysql_tutorial.html" target="_blank">https://www.ruanyifeng.com/blog/2013/12/mysql_tutorial.html</a>
-- **PostgreSQL教程**: <a href="https://www.ruanyifeng.com/blog/2013/12/getting_started_with_postgresql.html" target="_blank">https://www.ruanyifeng.com/blog/2013/12/getting_started_with_postgresql.html</a>
-- **数据库范式与反范式**: <a href="https://www.ruanyifeng.com/blog/2019/07/database-normalization.html" target="_blank">https://www.ruanyifeng.com/blog/2019/07/database-normalization.html</a>
-- **数据库基础知识入门**: <a href="https://www.ruanyifeng.com/blog/2015/05/database-normalization.html" target="_blank">https://www.ruanyifeng.com/blog/2015/05/database-normalization.html</a>
-
-### 网络协议
-- **HTTP协议入门**: <a href="https://www.ruanyifeng.com/blog/2016/08/http.html" target="_blank">https://www.ruanyifeng.com/blog/2016/08/http.html</a>
-- **HTTP协议入门教程**: <a href="https://www.ruanyifeng.com/blog/2016/08/http.html" target="_blank">https://www.ruanyifeng.com/blog/2016/08/http.html</a>
-- **HTTP缓存机制详解**: <a href="https://www.ruanyifeng.com/blog/2016/06/http_cache.html" target="_blank">https://www.ruanyifeng.com/blog/2016/06/http_cache.html</a>
-- **HTTP缓存机制入门**: <a href="https://www.ruanyifeng.com/blog/2018/06/cache.html" target="_blank">https://www.ruanyifeng.com/blog/2018/06/cache.html</a>
-- **HTTP/2协议入门**: <a href="https://www.ruanyifeng.com/blog/2016/08/http2.html" target="_blank">https://www.ruanyifeng.com/blog/2016/08/http2.html</a>
-- **TCP/IP协议详解**: <a href="https://www.ruanyifeng.com/blog/2017/06/tcp-protocol.html" target="_blank">https://www.ruanyifeng.com/blog/2017/06/tcp-protocol.html</a>
-- **TCP/IP协议入门**: <a href="https://www.ruanyifeng.com/blog/2012/05/internet_protocol_suite_part_i.html" target="_blank">https://www.ruanyifeng.com/blog/2012/05/internet_protocol_suite_part_i.html</a>
-- **网络协议基础知识**: <a href="https://www.ruanyifeng.com/blog/2012/05/internet_protocol_suite_part_ii.html" target="_blank">https://www.ruanyifeng.com/blog/2012/05/internet_protocol_suite_part_ii.html</a>
-- **计算机网络基础知识**: <a href="https://www.ruanyifeng.com/blog/2016/09/computer-networking.html" target="_blank">https://www.ruanyifeng.com/blog/2016/09/computer-networking.html</a>
-
-### API设计
-- **RESTful API设计指南**: <a href="https://www.ruanyifeng.com/blog/2014/05/restful_api.html" target="_blank">https://www.ruanyifeng.com/blog/2014/05/restful_api.html</a>
-- **Web API设计指南**: <a href="https://www.ruanyifeng.com/blog/2014/05/restful_api.html" target="_blank">https://www.ruanyifeng.com/blog/2014/05/restful_api.html</a>
-- **GraphQL入门教程**: <a href="https://www.ruanyifeng.com/blog/2019/08/graphql.html" target="_blank">https://www.ruanyifeng.com/blog/2019/08/graphql.html</a>
-
-### 服务器运维
-- **Nginx教程**: <a href="https://www.ruanyifeng.com/blog/2011/04/nginx.html" target="_blank">https://www.ruanyifeng.com/blog/2011/04/nginx.html</a>
-- **Nginx入门教程**: <a href="https://www.ruanyifeng.com/blog/2011/04/nginx.html" target="_blank">https://www.ruanyifeng.com/blog/2011/04/nginx.html</a>
-- **用Docker部署Node.js应用程序**: <a href="https://www.ruanyifeng.com/blog/2018/02/docker-wordpress-tutorial.html" target="_blank">https://www.ruanyifeng.com/blog/2018/02/docker-wordpress-tutorial.html</a>
-- **Docker入门教程**: <a href="https://www.ruanyifeng.com/blog/2018/02/docker-tutorial.html" target="_blank">https://www.ruanyifeng.com/blog/2018/02/docker-tutorial.html</a>
-
-### 版本控制
-- **Git分支管理策略**: <a href="https://www.ruanyifeng.com/blog/2012/07/git.html" target="_blank">https://www.ruanyifeng.com/blog/2012/07/git.html</a>
-- **Git入门教程**: <a href="https://www.ruanyifeng.com/blog/2014/06/git_remote.html" target="_blank">https://www.ruanyifeng.com/blog/2014/06/git_remote.html</a>
-- **Git操作实践**: <a href="https://www.ruanyifeng.com/blog/2014/06/git_remote.html" target="_blank">https://www.ruanyifeng.com/blog/2014/06/git_remote.html</a>
-
-### 文档工具
-- **Markdown语法教程**: <a href="https://www.ruanyifeng.com/blog/2018/09/markdown.html" target="_blank">https://www.ruanyifeng.com/blog/2018/09/markdown.html</a>
-- **Markdown入门教程**: <a href="https://www.ruanyifeng.com/blog/2018/10/markdown.html" target="_blank">https://www.ruanyifeng.com/blog/2018/10/markdown.html</a>
-- **正则表达式入门教程**: <a href="https://www.ruanyifeng.com/blog/2006/09/regular_expression.html" target="_blank">https://www.ruanyifeng.com/blog/2006/09/regular_expression.html</a>
-
-### 系统管理
-- **Unix/Linux命令行教程**: <a href="https://www.ruanyifeng.com/blog/2019/05/linux-command-line.html" target="_blank">https://www.ruanyifeng.com/blog/2019/05/linux-command-line.html</a>
-- **Linux命令行入门教程**: <a href="https://www.ruanyifeng.com/blog/2018/12/linux-command-line-tutorial.html" target="_blank">https://www.ruanyifeng.com/blog/2018/12/linux-command-line-tutorial.html</a>
-- **Linux基础命令行工具**: <a href="https://www.ruanyifeng.com/blog/2019/09/linux-command-line.html" target="_blank">https://www.ruanyifeng.com/blog/2019/09/linux-command-line.html</a>
-
-### 安全相关
-- **Web安全入门**: <a href="https://www.ruanyifeng.com/blog/2018/09/web-security.html" target="_blank">https://www.ruanyifeng.com/blog/2018/09/web-security.html</a>
-- **Web安全基础知识**: <a href="https://www.ruanyifeng.com/blog/2018/09/web-security.html" target="_blank">https://www.ruanyifeng.com/blog/2018/09/web-security.html</a>
-- **Web安全攻防**: <a href="https://www.ruanyifeng.com/blog/2012/08/web_security.html" target="_blank">https://www.ruanyifeng.com/blog/2012/08/web_security.html</a>
-- **网络安全的基础知识**: <a href="https://www.ruanyifeng.com/blog/2018/06/internet-security-basics.html" target="_blank">https://www.ruanyifeng.com/blog/2018/06/internet-security-basics.html</a>
-- **现代密码学基础知识**: <a href="https://www.ruanyifeng.com/blog/2013/07/rsa_algorithm_part_two.html" target="_blank">https://www.ruanyifeng.com/blog/2013/07/rsa_algorithm_part_two.html</a>
-
-### 性能优化
-- **Web应用性能优化实践**: <a href="https://www.ruanyifeng.com/blog/2015/09/web-page-performance-in-depth.html" target="_blank">https://www.ruanyifeng.com/blog/2015/09/web-page-performance-in-depth.html</a>
-- **网站性能优化指南**: <a href="https://www.ruanyifeng.com/blog/2015/09/web-page-performance-in-depth.html" target="_blank">https://www.ruanyifeng.com/blog/2015/09/web-page-performance-in-depth.html</a>
-
-### 移动开发
-- **PWA入门教程**: <a href="https://www.ruanyifeng.com/blog/2019/12/progressive-web-apps.html" target="_blank">https://www.ruanyifeng.com/blog/2019/12/progressive-web-apps.html</a>
-
-### 架构设计
-- **微服务架构的基础知识**: <a href="https://www.ruanyifeng.com/blog/2019/03/microservices.html" target="_blank">https://www.ruanyifeng.com/blog/2019/03/microservices.html</a>
-- **分布式系统的基础知识**: <a href="https://www.ruanyifeng.com/blog/2018/10/distributed-systems-basics.html" target="_blank">https://www.ruanyifeng.com/blog/2018/10/distributed-systems-basics.html</a>
-
-### 算法与数据结构
-- **算法与数据结构基础**: <a href="https://www.ruanyifeng.com/blog/algorithm/" target="_blank">https://www.ruanyifeng.com/blog/algorithm/</a>
-- **算法与数据结构基础知识**: <a href="https://www.ruanyifeng.com/blog/algorithm/" target="_blank">https://www.ruanyifeng.com/blog/algorithm/</a>
-- **算法可视化工具**: <a href="https://www.ruanyifeng.com/blog/2018/11/algorithm-visualizer.html" target="_blank">https://www.ruanyifeng.com/blog/2018/11/algorithm-visualizer.html</a>
-- **算法竞赛入门**: <a href="https://www.ruanyifeng.com/blog/2017/12/algorithm-exercise-101.html" target="_blank">https://www.ruanyifeng.com/blog/2017/12/algorithm-exercise-101.html</a>
-
-### 机器学习
-- **机器学习入门**: <a href="https://www.ruanyifeng.com/blog/2013/03/machine_learning_intro.html" target="_blank">https://www.ruanyifeng.com/blog/2013/03/machine_learning_intro.html</a>
-- **深度学习入门教程**: <a href="https://www.ruanyifeng.com/blog/2017/07/neural-network.html" target="_blank">https://www.ruanyifeng.com/blog/2017/07/neural-network.html</a>
-
-### 网络爬虫
-- **网络爬虫基础知识**: <a href="https://www.ruanyifeng.com/blog/2019/03/web-scraping.html" target="_blank">https://www.ruanyifeng.com/blog/2019/03/web-scraping.html</a>
-
-### 数学基础
-- **计算机科学的数学基础**: <a href="https://www.ruanyifeng.com/blog/2016/10/mathematics.html" target="_blank">https://www.ruanyifeng.com/blog/2016/10/mathematics.html</a>
-- **程序员必备的数学基础**: <a href="https://www.ruanyifeng.com/blog/2016/10/mathematics-for-programmers.html" target="_blank">https://www.ruanyifeng.com/blog/2016/10/mathematics-for-programmers.html</a>
-- **数学知识入门教程**: <a href="https://www.ruanyifeng.com/blog/2013/01/mathematical_notation_and_formula.html" target="_blank">https://www.ruanyifeng.com/blog/2013/01/mathematical_notation_and_formula.html</a>
-
-### 编程思想
-- **面向对象编程的基础知识**: <a href="https://www.ruanyifeng.com/blog/2019/02/oop.html" target="_blank">https://www.ruanyifeng.com/blog/2019/02/oop.html</a>
-- **软件工程的十大原则**: <a href="https://www.ruanyifeng.com/blog/2012/10/software_engineering.html" target="_blank">https://www.ruanyifeng.com/blog/2012/10/software_engineering.html</a>
-- **程序员的修养**: <a href="https://www.ruanyifeng.com/blog/2018/02/programming-philosophy.html" target="_blank">https://www.ruanyifeng.com/blog/2018/02/programming-philosophy.html</a>
-- **程序员的职业规划**: <a href="https://www.ruanyifeng.com/blog/2019/02/career-planning.html" target="_blank">https://www.ruanyifeng.com/blog/2019/02/career-planning.html</a>
-- **前端工程师的自我修养**: <a href="https://www.ruanyifeng.com/blog/2018/12/front-end-engineering.html" target="_blank">https://www.ruanyifeng.com/blog/2018/12/front-end-engineering.html</a>
-- **Web开发者需要了解的网络知识**: <a href="https://www.ruanyifeng.com/blog/2016/08/web_traffic.html" target="_blank">https://www.ruanyifeng.com/blog/2016/08/web_traffic.html</a>
