--- a/_posts/2022-02-12-tools.md
+++ b/_posts/2022-02-12-tools.md
@@ -3,28 +3,38 @@ layout: post
 title: "工具集"
 date: 2022-02-12
 categories: [其他]
-tags: [mac,命令大全]
+tags: [站点]
 author: zhangshuming
 ---
 
-# mac 各种操作解决方案
+# 工具集
 
-## 目录、
+## 目录
 
-1. [brew](#brew)
+1. [AI工具](#AI工具)
+2. [图片工具](#图片工具)
+3. [数据库工具](#数据库工具)
+4. [浏览器插件](#浏览器插件)
 
 ---
 
-## 安装brew
-控制台输入
-```
-/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-```
-环境变量生效
-```
-echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> ~/.zprofile
-   eval "$(/opt/homebrew/bin/brew shellenv)"
+## AI工具
 
-```
+### 国外AI图片、视频生成工具
+- **Pollo AI**: <a href="https://pollo.ai/zh/pricing" target="_blank">https://pollo.ai/zh/pricing</a>
+
+### 国内AI图片、视频生成工具
+- **即梦AI**: <a href="https://jimeng.jianying.com/ai-tool/generate?type=video" target="_blank">https://jimeng.jianying.com/ai-tool/generate?type=video</a>
+
+## 图片工具
+
+### 在线制作favicon 比特虫
+- **比特虫**: <a href="https://www.bitbug.net/" target="_blank">https://www.bitbug.net/</a>
 
 
+## 数据库工具
+- **mysql**: <a href="https://dev.mysql.com/downloads/mysql/" target="_blank">https://dev.mysql.com/downloads/mysql/</a>
+
+
+## 浏览器插件
+- **Bitwarden 用于存储各种密码也可以记录任何私密内容**: <a href="https://bitwarden.com/" target="_blank">https://bitwarden.com/</a>
