--- a/_posts/2023-09-12-question.md
+++ b/_posts/2023-09-12-question.md
@@ -31,3 +31,19 @@ source ~/.zshrc
 ```
 export PATH="/usr/bin:/bin:/usr/sbin:/sbin:\$PATH"
 ```
+
+---
+问题：zsh: command not found: brew
+执行安装
+```
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+```
+添加环境变量
+```
+echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> ~/.zprofile
+eval "$(/opt/homebrew/bin/brew shellenv)"
+```
+升级brew
+```
+ brew update
+```
