--- a/_posts/2023-09-12-question.md
+++ b/_posts/2023-09-12-question.md
@@ -7,6 +7,8 @@ tags: [问题]
 author: zhangshuming
 ---
 
+# 问题汇总
+
 # 2023-09-12 出现的问题,导致git提交不上去
 
 ![1](/assets/question/1/Snipaste_2025-07-21_09-17-24.png)
@@ -27,10 +29,11 @@ source ~/.zshrc
 
 ---
 # sudo ls 什么命令都用不了了mac
-执行
+执行 根据自己实际的路径
 ```
 export PATH="/usr/bin:/bin:/usr/sbin:/sbin:\$PATH"
 ```
+
 
 ---
 问题：zsh: command not found: brew
