--- a/_posts/2023-09-12-question.md
+++ b/_posts/2023-09-12-question.md
@@ -31,12 +31,12 @@ source ~/.zshrc
 # sudo ls 什么命令都用不了了mac
 执行 根据自己实际的路径
 ```
-export PATH="/usr/bin:/bin:/usr/sbin:/sbin:\$PATH"
+export PATH="/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin"
 ```
 
 
 ---
-问题：zsh: command not found: brew
+# 问题：zsh: command not found: brew
 执行安装
 ```
 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
