--- a/_posts/2022-06-12-common.md
+++ b/_posts/2022-06-12-common.md
@@ -7,76 +7,292 @@ tags: [常见问题]
 author: zhangshuming
 ---
 
-# centos 常见问题记录
+# 系统常见问题记录
 
 ## 目录
 
-1. [端口占用](#端口占用)
-2. [docker](#docker)
-3. [liunx版本](#liunx版本)
-4. [安装依赖](#安装依赖)
+1. [Windows问题](#windows问题)
+2. [Ubuntu问题](#ubuntu问题)
+3. [CentOS问题](#centos问题)
+
 ---
 
-## 端口占用
+## Windows问题
 
-### 查看某个端口占用
-   ```
-lsof -i :3000
-   ```
+### 端口占用问题解决
 
-### 解决端口占用
-   ```
-kill -9 pid
-   ```
+#### 查看端口占用
+```cmd
+# 查看所有端口占用
+netstat -ano
 
-## docker
-### docker 查看docker容器
-```
-docker ps
-```
-![端口占用查看示例](/assets/liunx-common/Snipaste_2025-07-11_10-43-04.png)
+# 查看特定端口占用（例如8080）
+netstat -ano | findstr :8080
 
-### 进入某个容器
-
-docker exec -it <container_name_or_id> /bin/bash
-
-
-## liunx版本
-
-### 查看liunx版本 
-```
- cat /etc/os-release
+# 查看进程详细信息
+tasklist | findstr <PID>
 ```
 
-## centos安装依赖
+#### 释放端口
+```cmd
+# 通过PID杀死进程
+taskkill /PID <PID> /F
 
-### 安装
-```
-sudo yum install nodejs npm -y
-```
-
-### 移除
-```
-sudo yum remove nodejs npm -y
+# 通过进程名杀死进程
+taskkill /IM <进程名> /F
 ```
 
-# ubuntu 常见问题
+### 安装移除依赖问题解决
 
-##端口占用
-### 安装 netstat
+#### 使用Chocolatey包管理器
+```cmd
+# 安装Chocolatey
+Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+
+# 安装软件包
+choco install <包名>
+
+# 卸载软件包
+choco uninstall <包名>
+
+# 更新软件包
+choco upgrade <包名>
 ```
- apt search netstat
+
+#### 使用Scoop包管理器
+```cmd
+# 安装Scoop
+Set-ExecutionPolicy RemoteSigned -Scope CurrentUser
+irm get.scoop.sh | iex
+
+# 安装软件包
+scoop install <包名>
+
+# 卸载软件包
+scoop uninstall <包名>
+
+# 更新软件包
+scoop update <包名>
 ```
-### 查看占用
+
+---
+
+## Ubuntu问题
+
+### 端口占用问题解决
+
+#### 查看端口占用
+```bash
+# 查看所有端口占用
+netstat -tulpn
+
+# 查看特定端口占用（例如8080）
+lsof -i :8080
+
+# 查看进程详细信息
+ps aux | grep <PID>
 ```
- sudo netstat -tuln | grep :80
+
+#### 释放端口
+```bash
+# 通过PID杀死进程
+kill -9 <PID>
+
+# 通过进程名杀死进程
+pkill -f <进程名>
 ```
 
-# windows 常见问题记录
-## 目录
+### 安装移除依赖问题解决
 
-1. [端口占用](#端口占用)
+#### 使用apt包管理器
+```bash
+# 更新包列表
+sudo apt update
 
-## 端口占用 
+# 安装软件包
+sudo apt install <包名>
 
-lsof -i :3000 | grep LISTEN | awk '{print $2}' | xargs kill -9
+# 卸载软件包（保留配置文件）
+sudo apt remove <包名>
+
+# 完全卸载软件包（包括配置文件）
+sudo apt purge <包名>
+
+# 清理不再需要的依赖
+sudo apt autoremove
+
+# 清理包缓存
+sudo apt autoclean
+```
+
+#### 使用snap包管理器
+```bash
+# 安装软件包
+sudo snap install <包名>
+
+# 卸载软件包
+sudo snap remove <包名>
+
+# 查看已安装的snap包
+snap list
+```
+
+#### 使用dpkg安装deb包
+```bash
+# 安装deb包
+sudo dpkg -i <包名>.deb
+
+# 卸载deb包
+sudo dpkg -r <包名>
+
+# 完全卸载deb包
+sudo dpkg --purge <包名>
+```
+
+---
+
+## CentOS问题
+
+### 端口占用问题解决
+
+#### 查看端口占用
+```bash
+# 查看所有端口占用
+netstat -tulpn
+
+# 查看特定端口占用（例如8080）
+lsof -i :8080
+
+# 使用ss命令查看端口
+ss -tulpn
+
+# 查看进程详细信息
+ps aux | grep <PID>
+```
+
+#### 释放端口
+```bash
+# 通过PID杀死进程
+kill -9 <PID>
+
+# 通过进程名杀死进程
+pkill -f <进程名>
+
+# 使用killall命令
+killall <进程名>
+```
+
+### 安装移除依赖问题解决
+
+#### 使用yum包管理器（CentOS 7及以下）
+```bash
+# 更新包列表
+sudo yum update
+
+# 安装软件包
+sudo yum install <包名>
+
+# 卸载软件包
+sudo yum remove <包名>
+
+# 完全卸载软件包（包括依赖）
+sudo yum autoremove <包名>
+
+# 清理缓存
+sudo yum clean all
+
+# 查看已安装的包
+yum list installed
+```
+
+#### 使用dnf包管理器（CentOS 8及以上）
+```bash
+# 更新包列表
+sudo dnf update
+
+# 安装软件包
+sudo dnf install <包名>
+
+# 卸载软件包
+sudo dnf remove <包名>
+
+# 完全卸载软件包（包括依赖）
+sudo dnf autoremove <包名>
+
+# 清理缓存
+sudo dnf clean all
+
+# 查看已安装的包
+dnf list installed
+```
+
+#### 使用rpm安装包
+```bash
+# 安装rpm包
+sudo rpm -ivh <包名>.rpm
+
+# 卸载rpm包
+sudo rpm -e <包名>
+
+# 查询已安装的rpm包
+rpm -qa | grep <包名>
+
+# 强制安装（忽略依赖）
+sudo rpm -ivh --nodeps <包名>.rpm
+```
+
+#### 源码编译安装
+```bash
+# 下载并解压源码
+wget <源码地址>
+tar -xzf <源码包>.tar.gz
+cd <源码目录>
+
+# 配置编译选项
+./configure --prefix=/usr/local/<软件名>
+
+# 编译和安装
+make
+sudo make install
+
+# 卸载（如果支持）
+sudo make uninstall
+```
+
+---
+
+## 通用问题解决技巧
+
+### 端口问题排查步骤
+1. 使用`netstat`或`lsof`查看端口占用
+2. 确认占用进程的PID
+3. 使用`ps`命令查看进程详细信息
+4. 使用`kill`命令终止进程
+5. 验证端口是否已释放
+
+### 依赖问题排查步骤
+1. 检查包管理器缓存是否需要更新
+2. 确认软件包名称是否正确
+3. 检查是否有依赖冲突
+4. 清理包管理器缓存
+5. 使用`--force`或`--nodeps`强制安装（谨慎使用）
+
+### 常用命令速查
+```bash
+# 查看系统信息
+uname -a
+cat /etc/os-release
+
+# 查看磁盘空间
+df -h
+
+# 查看内存使用
+free -h
+
+# 查看CPU信息
+lscpu
+
+# 查看网络连接
+ip addr show
+```
+
