--- a/_posts/2023-09-12-question.md
+++ b/_posts/2023-09-12-question.md
@@ -50,3 +50,12 @@ eval "$(/opt/homebrew/bin/brew shellenv)"
 ```
  brew update
 ```
+
+---
+# 问题执行删除文件删除不掉的问题
+![4](/assets/question/1/Snipaste_2025-07-28_10-51-35.png)
+
+```
+chattr -i .user.ini
+```
+改变文件类型为可删除，再删除即可
