--- a/_posts/2022-06-12-nginx.md
+++ b/_posts/2022-06-12-nginx.md
@@ -14,7 +14,8 @@ author: zhangshuming
 1. [Windows](#windows)
 2. [Ubuntu](#ubuntu)
 3. [CentOS](#centos)
-3. [问题汇总](#问题汇总)
+4. [问题汇总](#问题汇总)
+5. [配置](#配置)
 
 ---
 
@@ -343,6 +344,347 @@ sudo apt remove --purge nginx nginx-common
 sudo apt autoremove
 sudo apt update
 sudo apt install nginx
+```
+
+---
+
+## 配置
+
+### 配置文件结构
+
+nginx的配置文件采用模块化的结构，主要包含以下部分：
+
+```nginx
+# 全局配置块
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /run/nginx.pid;
+
+# events块
+events {
+    worker_connections 1024;
+    use epoll;
+}
+
+# http块
+http {
+    # 基础配置
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    
+    # 日志格式
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    
+    # 访问日志
+    access_log /var/log/nginx/access.log main;
+    
+    # 基础设置
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    
+    # 包含其他配置文件
+    include /etc/nginx/conf.d/*.conf;
+    
+    # server块
+    server {
+        listen 80;
+        server_name example.com;
+        root /var/www/html;
+        index index.html index.htm;
+        
+        location / {
+            try_files $uri $uri/ =404;
+        }
+    }
+}
+```
+
+### 常用配置指令
+
+#### 全局配置指令
+
+```nginx
+# 指定运行nginx的用户
+user nginx;
+
+# 工作进程数，通常设置为CPU核心数
+worker_processes auto;
+
+# 错误日志位置
+error_log /var/log/nginx/error.log;
+
+# PID文件位置
+pid /run/nginx.pid;
+
+# 最大文件打开数
+worker_rlimit_nofile 65535;
+```
+
+#### events块配置
+
+```nginx
+events {
+    # 每个工作进程的最大连接数
+    worker_connections 1024;
+    
+    # 使用的事件模型
+    use epoll;
+    
+    # 是否接受多个连接
+    multi_accept on;
+}
+```
+
+#### http块配置
+
+```nginx
+http {
+    # 包含MIME类型定义
+    include /etc/nginx/mime.types;
+    
+    # 默认MIME类型
+    default_type application/octet-stream;
+    
+    # 日志格式定义
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    
+    # 访问日志配置
+    access_log /var/log/nginx/access.log main;
+    
+    # 性能优化
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    
+    # Gzip压缩
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
+}
+```
+
+### server块配置
+
+#### 基础server配置
+
+```nginx
+server {
+    # 监听端口
+    listen 80;
+    
+    # 服务器名称
+    server_name example.com www.example.com;
+    
+    # 网站根目录
+    root /var/www/html;
+    
+    # 默认首页
+    index index.html index.htm index.php;
+    
+    # 字符编码
+    charset utf-8;
+    
+    # 错误页面
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+}
+```
+
+#### location块配置
+
+```nginx
+# 精确匹配
+location = /exact {
+    return 200 "exact match";
+}
+
+# 前缀匹配（最长匹配）
+location /prefix {
+    root /var/www/prefix;
+    try_files $uri $uri/ =404;
+}
+
+# 正则匹配
+location ~ \.php$ {
+    fastcgi_pass 127.0.0.1:9000;
+    fastcgi_index index.php;
+    include fastcgi_params;
+}
+
+# 不区分大小写的正则匹配
+location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+    expires 1y;
+    add_header Cache-Control "public, immutable";
+}
+```
+
+### 反向代理配置
+
+```nginx
+server {
+    listen 80;
+    server_name example.com;
+    
+    location / {
+        proxy_pass http://backend_server;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # 超时设置
+        proxy_connect_timeout 30s;
+        proxy_send_timeout 30s;
+        proxy_read_timeout 30s;
+    }
+}
+```
+
+### 负载均衡配置
+
+```nginx
+# 定义上游服务器组
+upstream backend {
+    server 192.168.1.10:8080 weight=3;
+    server 192.168.1.11:8080 weight=2;
+    server 192.168.1.12:8080 weight=1;
+    
+    # 负载均衡算法
+    # least_conn;  # 最少连接数
+    # ip_hash;     # IP哈希
+    # hash $request_uri;  # URI哈希
+}
+
+server {
+    listen 80;
+    server_name example.com;
+    
+    location / {
+        proxy_pass http://backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+}
+```
+
+### SSL/HTTPS配置
+
+```nginx
+server {
+    listen 80;
+    server_name example.com;
+    return 301 https://$server_name$request_uri;
+}
+
+server {
+    listen 443 ssl http2;
+    server_name example.com;
+    
+    # SSL证书配置
+    ssl_certificate /path/to/certificate.crt;
+    ssl_certificate_key /path/to/private.key;
+    
+    # SSL安全配置
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
+    ssl_prefer_server_ciphers off;
+    
+    # SSL会话缓存
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    
+    # HSTS头
+    add_header Strict-Transport-Security "max-age=31536000" always;
+    
+    location / {
+        root /var/www/html;
+        index index.html;
+    }
+}
+```
+
+### 常用配置优化
+
+#### 性能优化
+
+```nginx
+# 工作进程数
+worker_processes auto;
+
+# 每个进程最大连接数
+worker_connections 1024;
+
+# 文件描述符限制
+worker_rlimit_nofile 65535;
+
+# 启用sendfile
+sendfile on;
+tcp_nopush on;
+tcp_nodelay on;
+
+# 启用gzip压缩
+gzip on;
+gzip_vary on;
+gzip_min_length 1024;
+gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
+```
+
+#### 安全配置
+
+```nginx
+# 隐藏nginx版本号
+server_tokens off;
+
+# 安全头
+add_header X-Frame-Options "SAMEORIGIN" always;
+add_header X-Content-Type-Options "nosniff" always;
+add_header X-XSS-Protection "1; mode=block" always;
+
+# 限制请求大小
+client_max_body_size 10m;
+
+# 超时设置
+client_body_timeout 12;
+client_header_timeout 12;
+```
+
+### 配置文件检查
+
+```bash
+# 检查配置文件语法
+nginx -t
+
+# 显示完整配置
+nginx -T
+
+# 测试配置并显示详细信息
+nginx -T | grep -E "(server|location|upstream)"
+```
+
+### 配置文件管理
+
+```bash
+# 备份配置文件
+sudo cp /etc/nginx/nginx.conf /etc/nginx/nginx.conf.backup
+
+# 重新加载配置
+sudo nginx -s reload
+
+# 查看nginx进程
+ps aux | grep nginx
+
+# 查看nginx状态
+sudo systemctl status nginx
 ```
 
 
