--- a/_posts/2024-06-12-pm2-usage.md
+++ b/_posts/2024-06-12-pm2-usage.md
@@ -2,7 +2,7 @@
 layout: post
 title: "pm2 使用方式"
 date: 2024-06-12
-categories: [Node.js]
+categories: [前端]
 tags: [pm2, Node.js, 进程管理]
 author: zhangshuming
 ---
