--- a/_posts/2023-04-07-docker.md
+++ b/_posts/2023-04-07-docker.md
@@ -2,7 +2,7 @@
 layout: post
 title: "本地项目docker部署"
 date: 2023-04-07
-categories: [其他]
+categories: [后端]
 tags: [docker, 本地开发]
 author: zhangshuming
 ---
