--- a/_posts/2022-06-12-nginx.md
+++ b/_posts/2022-06-12-nginx.md
@@ -2,7 +2,7 @@
 layout: post
 title: "nginx常见问题"
 date: 2022-06-12
-categories: [其他]
+categories: [前端]
 tags: [nginx,常见问题]
 author: zhangshuming
 ---
