--- a/_posts/2023-04-07-docker.md
+++ b/_posts/2023-04-07-docker.md
@@ -425,7 +425,7 @@ docker exec -it openlayers-test-app-dev sh
 - **热重载**: 代码修改后自动刷新
 - **源码映射**: 支持浏览器调试
 - **实时编译**: TypeScript实时编译
-- **开发工具**: 完整的开发工具链
+- **工具**: 完整的工具链
 
 ### 访问开发环境
 
