--- a/_posts/2022-06-12-rem.md
+++ b/_posts/2022-06-12-rem.md
@@ -1,12 +1,17 @@
 ---
-title: '深入理解 rem 单位：原理与实战'
+author: zhangshuming
+categories:
+- 前端
 date: 2022-06-12
+excerpt: 在前端开发中，rem（root em）单位因其强大的响应式能力和易维护性，成为现代网页布局的首选单位之一。本文将带你全面了解 rem 单位的原理、用法及最佳实践，掌握响应式设计的核心技巧。
 layout: post
-categories: [前端]
-tags: [css, rem, 响应式设计, 前端开发]
-excerpt: '在前端开发中，rem（root em）单位因其强大的响应式能力和易维护性，成为现代网页布局的首选单位之一。本文将带你全面了解 rem 单位的原理、用法及最佳实践，掌握响应式设计的核心技巧。'
+tags:
+- css
+- rem
+- 响应式设计
+- 前端开发
+title: 深入理解 rem 单位：原理与实战
 ---
-
 # 深入理解 rem 单位：原理与实战 {#rem-introduction}
 
 在前端开发中，`rem`（root em）单位因其强大的响应式能力和易维护性，成为现代网页布局的首选单位之一。那么，`rem` 到底是什么？它是如何工作的？又该如何在项目中高效使用？本文将带你全面了解 `rem` 单位的原理、用法及最佳实践。
