--- a/_posts/2022-02-12-tools.md
+++ b/_posts/2022-02-12-tools.md
@@ -38,3 +38,7 @@ author: zhangshuming
 
 ## 浏览器插件
 - **Bitwarden 用于存储各种密码也可以记录任何私密内容**: <a href="https://bitwarden.com/" target="_blank">https://bitwarden.com/</a>
+
+## 其他
+- **宇宙全景地图**: <a href="https://worldwidetelescope.org/webclient/" target="_blank">https://worldwidetelescope.org/webclient/</a>
+- **全景场景**: <a href="https://polyhaven.com/zh/a/metro_noord" target="_blank">https://polyhaven.com/zh/a/metro_noord</a>
