--- a/_posts/2022-02-12-tools.md
+++ b/_posts/2022-02-12-tools.md
@@ -42,3 +42,5 @@ author: zhangshuming
 ## 其他
 - **宇宙全景地图**: <a href="https://worldwidetelescope.org/webclient/" target="_blank">https://worldwidetelescope.org/webclient/</a>
 - **全景场景**: <a href="https://polyhaven.com/zh/a/metro_noord" target="_blank">https://polyhaven.com/zh/a/metro_noord</a>
+- **3D模型网站** <a href="https://sketchfab.com/3d-models/gift-box-2-e8032e3b76d14bf0916ec70a0f31508a" target="_blank">https://sketchfab.com/3d-models/gift-box-2-e8032e3b76d14bf0916ec70a0f31508a</a>
+- **AI图片生成三维模型** <a href="https://poly.cam/" target="_blank">https://poly.cam/
