--- a/_posts/2022-02-12-tools.md
+++ b/_posts/2022-02-12-tools.md
@@ -26,10 +26,18 @@ author: zhangshuming
 ### 国内AI图片、视频生成工具
 - **即梦AI**: <a href="https://jimeng.jianying.com/ai-tool/generate?type=video" target="_blank">https://jimeng.jianying.com/ai-tool/generate?type=video</a>
 
+### AI图片生成三维模型
+- **AI图片生成三维模型** <a href="https://poly.cam/" target="_blank">https://poly.cam/
+
 ## 图片工具
 
 ### 在线制作favicon 比特虫
 - **比特虫**: <a href="https://www.bitbug.net/" target="_blank">https://www.bitbug.net/</a>
+
+## 视频工具
+### 视频压缩工具
+- **videosmaller**: <a href="https://www.videosmaller.com/" target="_blank">https://www.videosmaller.com/</a>
+
 
 
 ## 数据库工具
@@ -39,8 +47,13 @@ author: zhangshuming
 ## 浏览器插件
 - **Bitwarden 用于存储各种密码也可以记录任何私密内容**: <a href="https://bitwarden.com/" target="_blank">https://bitwarden.com/</a>
 
-## 其他
-- **宇宙全景地图**: <a href="https://worldwidetelescope.org/webclient/" target="_blank">https://worldwidetelescope.org/webclient/</a>
+## 资源下载
+### 3D模型资源
 - **全景场景**: <a href="https://polyhaven.com/zh/a/metro_noord" target="_blank">https://polyhaven.com/zh/a/metro_noord</a>
 - **3D模型网站** <a href="https://sketchfab.com/3d-models/gift-box-2-e8032e3b76d14bf0916ec70a0f31508a" target="_blank">https://sketchfab.com/3d-models/gift-box-2-e8032e3b76d14bf0916ec70a0f31508a</a>
-- **AI图片生成三维模型** <a href="https://poly.cam/" target="_blank">https://poly.cam/
+
+
+
+
+##其他
+- **宇宙全景地图**: <a href="https://worldwidetelescope.org/webclient/" target="_blank">https://worldwidetelescope.org/webclient/</a>
