--- a/_posts/2022-06-12-rem.md
+++ b/_posts/2022-06-12-rem.md
@@ -1,15 +1,10 @@
 ---
 author: zhangshuming
-categories:
-- 前端
+categories: [前端]
 date: 2022-06-12
 excerpt: 在前端开发中，rem（root em）单位因其强大的响应式能力和易维护性，成为现代网页布局的首选单位之一。本文将带你全面了解 rem 单位的原理、用法及最佳实践，掌握响应式设计的核心技巧。
 layout: post
-tags:
-- css
-- rem
-- 响应式设计
-- 前端开发
+tags: [css, rem, 响应式设计, 前端开发]
 title: 深入理解 rem 单位：原理与实战
 ---
 # 深入理解 rem 单位：原理与实战 {#rem-introduction}
