--- a/_posts/2023-06-04-test.md
+++ b/_posts/2023-06-04-test.md
@@ -1,16 +1,12 @@
 ---
 author: zhangshuming
-categories:
-- 其他
+categories: [其他]
 date: 2023-06-04
 excerpt: 这是一篇展示 Markdown 各种功能的示例文章。从基本的文本格式化到复杂的表格和数学公式，Markdown 都能轻松应对。掌握 Markdown
   将极大提升你的文档编写效率。
 layout: post
-tags:
-- markdown
-- 教程
-- 文档编写
-- 示例
+tags: [markdown, 教程, 文档编写, 示例]
+
 title: Markdown 使用指南
 ---
 # Markdown 使用指南
