--- a/_posts/2022-02-12-tools.md
+++ b/_posts/2022-02-12-tools.md
@@ -22,6 +22,7 @@ author: zhangshuming
 
 ### 国外AI图片、视频生成工具
 - **Pollo AI**: <a href="https://pollo.ai/zh/pricing" target="_blank">https://pollo.ai/zh/pricing</a>
+- **Veo3**： <a href="https://openart.ai/video/i2v/veo3?gad_source=1&gad_campaignid=22795382774&gbraid=0AAAAA-yeP4NrZ19sm5jjlMnmZs2HnVgEn&gclid=CjwKCAjwtfvEBhAmEiwA-DsKjjvjUxgrsoy50ewdCPxTMmsgh4swTGPAOt4jIyStr7AI2-YzEKEMihoCdn4QAvD_BwE" target="_blank">https://openart.ai/video/i2v/veo3?gad_source=1&gad_campaignid=22795382774&gbraid=0AAAAA-yeP4NrZ19sm5jjlMnmZs2HnVgEn&gclid=CjwKCAjwtfvEBhAmEiwA-DsKjjvjUxgrsoy50ewdCPxTMmsgh4swTGPAOt4jIyStr7AI2-YzEKEMihoCdn4QAvD_BwE</a>
 
 ### 国内AI图片、视频生成工具
 - **即梦AI**: <a href="https://jimeng.jianying.com/ai-tool/generate?type=video" target="_blank">https://jimeng.jianying.com/ai-tool/generate?type=video</a>
