--- a/_posts/2022-02-12-tools.md
+++ b/_posts/2022-02-12-tools.md
@@ -15,6 +15,7 @@ author: zhangshuming
 2. [图片工具](#图片工具)
 3. [数据库工具](#数据库工具)
 4. [浏览器插件](#浏览器插件)
+5. [下载工具](#下载工具)
 
 ---
 
@@ -52,6 +53,12 @@ author: zhangshuming
 ### 3D模型资源
 - **全景场景**: <a href="https://polyhaven.com/zh/a/metro_noord" target="_blank">https://polyhaven.com/zh/a/metro_noord</a>
 - **3D模型网站** <a href="https://sketchfab.com/3d-models/gift-box-2-e8032e3b76d14bf0916ec70a0f31508a" target="_blank">https://sketchfab.com/3d-models/gift-box-2-e8032e3b76d14bf0916ec70a0f31508a</a>
+
+
+
+
+## 下载工具
+- **youtube 推特 视频下载工具**: <a href="https://www.datatool.vip/" target="_blank">https://www.datatool.vip/</a>
 
 
 
