--- a/_posts/2022-02-12-tools.md
+++ b/_posts/2022-02-12-tools.md
@@ -16,6 +16,7 @@ author: zhangshuming
 3. [数据库工具](#数据库工具)
 4. [浏览器插件](#浏览器插件)
 5. [下载工具](#下载工具)
+6. [git资源](#git资源)
 
 ---
 
@@ -30,6 +31,9 @@ author: zhangshuming
 
 ### AI图片生成三维模型
 - **AI图片生成三维模型** <a href="https://poly.cam/" target="_blank">https://poly.cam/
+
+### 机器之心
+- **机器之心论坛** <a href="https://poly.cam/https://www.jiqizhixin.com/?from=www.mlhub123.com" target="_blank">https://poly.cam/https://www.jiqizhixin.com/?from=www.mlhub123.com
 
 ## 图片工具
 
@@ -59,9 +63,14 @@ author: zhangshuming
 
 ## 下载工具
 - **youtube 推特 视频下载工具**: <a href="https://www.datatool.vip/" target="_blank">https://www.datatool.vip/</a>
+- **cobalt 视频下载工具**: <a href="https://cobalt.tools/" target="_blank">https://cobalt.tools/</a>
+
 
 
 
 
 ##其他
 - **宇宙全景地图**: <a href="https://worldwidetelescope.org/webclient/" target="_blank">https://worldwidetelescope.org/webclient/</a>
+
+##git资源
+- **关于机器学习的git资源**: <a href="https://github.com/howie6879/mlhub123?tab=readme-ov-file" target="_blank">https://github.com/howie6879/mlhub123?tab=readme-ov-file</a>
