--- a/_posts/2022-02-12-tools.md
+++ b/_posts/2022-02-12-tools.md
@@ -69,8 +69,10 @@ author: zhangshuming
 
 
 
-##其他
+## 其他
+### 看宇宙
 - **宇宙全景地图**: <a href="https://worldwidetelescope.org/webclient/" target="_blank">https://worldwidetelescope.org/webclient/</a>
 
-##git资源
+## git资源
+### git仓库
 - **关于机器学习的git资源**: <a href="https://github.com/howie6879/mlhub123?tab=readme-ov-file" target="_blank">https://github.com/howie6879/mlhub123?tab=readme-ov-file</a>
