--- a/_posts/2025-03-12-bi.md
+++ b/_posts/2025-03-12-bi.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: "工具集"
+title: "币圈各种网站"
 date: 2025-03-12
 categories: [工具]
 tags: [站点]
 author: zhangshuming
 ---
 
-# 工具集
+# 币圈各种网站
 
 ## 目录
 
@@ -18,3 +18,6 @@ author: zhangshuming
 
 ### 国外AI图片、视频生成工具
 - **gmgn.ai**: <a href="https://gmgn.ai/?chain=sol&ref=uOUVbxFX" target="_blank">https://gmgn.ai/?chain=sol&ref=uOUVbxFX</a>
+
+### 币圈安全指南
+- **币圈安全指南**: <a href="https://docs.gmgn.ai/cn/an-quan-ti-shi" target="_blank">https://docs.gmgn.ai/cn/an-quan-ti-shi</a>
