--- a/_posts/2022-02-12-tools.md
+++ b/_posts/2022-02-12-tools.md
@@ -17,6 +17,7 @@ author: zhangshuming
 4. [浏览器插件](#浏览器插件)
 5. [下载工具](#下载工具)
 6. [git资源](#git资源)
+7. [爬虫工具](#爬虫工具)
 
 ---
 
@@ -76,3 +77,8 @@ author: zhangshuming
 ## git资源
 ### git仓库
 - **关于机器学习的git资源**: <a href="https://github.com/howie6879/mlhub123?tab=readme-ov-file" target="_blank">https://github.com/howie6879/mlhub123?tab=readme-ov-file</a>
+
+
+## 爬虫工具
+### 各种网站的爬虫工具，并丢给ai分析
+- **各种网站的爬虫工具，并丢给ai分析**: <a href="https://www.browseract.com/reception/template/amazon-scraper-for-best-sellers-data" target="_blank">https://www.browseract.com/reception/template/amazon-scraper-for-best-sellers-data</a>
